--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*",
-		"twilio/sdk": "*"
+		"laravel/framework": "4.2.*"
 	},
 	"autoload": {
 		"classmap": [
@@ -16,10 +15,7 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		],
-		"psr-4": {
-			"models\\": "app/models"
-		}
+		]
 	},
 	"scripts": {
 		"post-install-cmd": [
