--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "app/tests/TestCase.php"
         ],
         "psr-4": {
-            "models\\": "app/models"
+            "app\\": "app/"
         }
     },
     "scripts": {
